5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1712_2497.log
== SUBMITION (2019-05-12 21:16:00) 
-- CODE:
qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi   

t = 0

while (qi):
	rend = saldo * juros
	saldo = saldo + rend
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.141371
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2497/main.py", line 1, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:16:02) 
-- CODE:
qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi   

t = 0

while (qi):
	rend = saldo * juros
	saldo = saldo + rend
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:16:35) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi   

t = 0

while (qi):
	rend = saldo * juros
	saldo = saldo + rend
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:17:13) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi   

t = 0

while (qi< tempo * 12):
	rend = saldo * juros
	saldo = saldo + rend
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:18:24) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi   

t = 0

while (qi< tempo * 12):
	rend = saldo * juros
	saldo = (saldo + rend)/100
	t = t+1

print(round(saldo, 2)) 

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:18:50) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi   

t = 0

while (qi< tempo):
	rend = saldo * juros
	saldo = (saldo + rend)/100
	t = t+1

print(round(saldo, 2)) 

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:09:44) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi   
t = 0

while (qi < tempo * 12 ):
	rend = saldo * juros
	saldo = (saldo + rend)/100
	t = t+1

print(round(saldo, 2)) 

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:09:51) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi   
t = 0

while (qi < tempo * 12 ):
	rend = saldo * juros
	saldo = (saldo + rend)/100
	t = t+1

print(round(saldo, 2)) 

	

-- EXECUTION TIME:
0.17496
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
575.25
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
825.4
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1275.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:09:53) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi   
t = 0

while (qi < tempo * 12 ):
	rend = saldo * juros
	saldo = (saldo + rend)/100
	t = t+1

print(round(saldo, 2)) 

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:20:43) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi   
t = 0

while (qi < tempo * 12 ):
	rend = saldo * juros
	saldo = (saldo + rend)/100
	t = t+1

print(round(saldo, 2)) 

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:21:16) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi   
t = 0

while (qi < tempo * 12 ):
	rend = saldo * juros
	saldo = (saldo + rend)/100
	t = t+1

print(round(saldo, 2)) 

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:48:41) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi   
t = 0

while (tempo>t):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t+1
   print(round(saldo, 2)) 

	

-- ERROR:
File "XXXX", line 11
    print(round(saldo, 2)) 
                          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:48:54) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi   

t = 0

while (tempo > t):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t+1
   print(round(saldo, 2)) 

	

-- ERROR:
File "XXXX", line 12
    print(round(saldo, 2)) 
                          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:49:03) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi   

t = 0

while (tempo > t):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1
   print(round(saldo, 2)) 

	

-- ERROR:
File "XXXX", line 12
    print(round(saldo, 2)) 
                          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:49:21) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi   

t = 0

while (tempo > t):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2)) 

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:49:27) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi   

t = 0

while (tempo > t):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2)) 

-- EXECUTION TIME:
0.165555
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
